--- a/Readme
+++ b/Readme
@@ -1,4 +1,29 @@
-# 🛒 E-Commerce Sales Analysis Dashboard (Excel)
+# 🛒 **Project 1 : E-Commerce Sales Analysis Dashboard (Excel)**
+
+## 📊 Project Overview
+This project is an interactive **E-Commerce Sales Analysis Dashboard** built entirely in **Microsoft Excel** — no external tools or code were used.  
+The goal is to analyze key performance indicators (KPIs) such as **Sales, Profit, Quantity, Orders, and Profit Margin** to evaluate business performance and identify trends that drive decision-making.
+
+---
+
+## 🎯 Objectives
+- Visualize overall business performance using Excel dashboards.
+- Track **Year-over-Year (YOY)** growth across key metrics.
+- Analyze **category-wise** and **regional sales distribution**.
+- Identify **top-performing product sub-categories**.
+- Enable management to make **data-driven strategic decisions** using Excel visuals.
+
+---
+
+## 🧮 Key Metrics
+| Metric | Value | YOY Growth |
+|---------|--------|------------|
+| **Total Sales** | ₹1,27,463.73 | 🔼 57.96% |
+| **Total Profit** | ₹91,522.78 | 🔼 28.64% |
+| **Quantity Sold** | 1,913 | 🔼 27.45% |
+| **No. of Orders** | 502 | 🔼 14.41% |
+| **Profit M**
+
 
 ## 📊 Project Overview
 This project is an interactive **E-Commerce Sales Analysis Dashboard** built entirely in **Microsoft Excel** — no external tools or code were used.  
@@ -74,7 +99,7 @@ The goal is to analyze key performance indicators (KPIs) such as **Sales, Profit
 - **Phones, Copiers, and Storage** emerged as top-selling subcategories.
 - **Central and East regions** show strong potential for growth.
 
----
 
-## 📂 Repository Structure
+## Project image
+
 
